# src/main/java/com/proyecto/infrastructure/adapter/in/web/controller/HealthController.java
@@ -1,0 +1,19 @@
+package com.proyecto.infrastructure.adapter.in.web.controller;
+
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.Collections;
+import java.util.Map;
+
+@RestController
+@RequestMapping("/health")
+public class HealthController {
+
+    @GetMapping
+    public ResponseEntity<Map<String, String>> healthCheck() {
+        return ResponseEntity.ok(Collections.singletonMap("status", "UP"));
+    }
+}
